--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/nitishgaurav/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/nits2654/" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://github.com/nitsg2654/" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
